Use filter table tree for Available Views view implementation
- Use FilterTree
- Add tooltips to TreeNode and TableCell
- Enable sorting and filter

fixes #1113

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -258,6 +258,17 @@ canvas {
     font-weight: normal;
 }
 
+.avail-views-table {
+    border: 0px;
+    width: 100%;
+}
+
+.avail-views-table td {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .table-tree tr.selected td {
     background-color: var(--trace-viewer-selection-background) !important;
 }
