Fix filter tree filter text box width
Use box-sizing: border-box setting so that the provided width includes
the filter text box padding and border.

Use the reference element's right position as provided width so that it
can include the reference element's left margin.

Signed-off-by: Patrick Tasse <patrick.tasse@gmail.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -332,6 +332,7 @@ canvas {
     padding: 3px;
     margin-bottom: 5px;
     text-indent: 23px;
+    box-sizing: border-box;
     color: var(--trace-viewer-input-placeholder-foreground);
 }
 
