Change mouse cursor to pointer when hovering over an output
The implementation of the available view has recently change and the
cursor was not updated when hovering over an output (view). This
commit changes that.

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -269,6 +269,10 @@ canvas {
     white-space: nowrap;
 }
 
+.avail-views-table tr {
+    cursor: pointer;
+}
+
 .table-tree tr.selected td {
     background-color: var(--trace-viewer-selection-background) !important;
 }
