Add filter to Opened Traces widget
Add filter container to ReactOpenTracesWidget. Add filter string to the
widget's state.

When filter is applied, hide rows that don't match the filter for
neither the experiment name nor any of the experiment's traces' name.
Rows are hidden by returning 0 as row height and rendering to undefined.

Rename CSS class 'input-filter-tree' to generic 'input-filter-text'.

Signed-off-by: Patrick Tasse <patrick.tasse@gmail.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -332,7 +332,7 @@ canvas {
     left: 8px;
 }
 
-#input-filter-tree {
+#input-filter-text {
     background-color: var(--trace-viewer-input-background);
     border-style: solid;
     border-color: var(--trace-viewer-tree-inactiveIndentGuidesStroke);
