--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -315,6 +315,12 @@ canvas {
     line-height: 18px;
 }
 
+.timegraph-tree th {
+    line-height: 14px;
+    position: sticky;
+    top: 0px;
+}
+
 .timegraph-tree td {
     padding: 1px;
     border-left: 1px solid var(--trace-viewer-tree-inactiveIndentGuidesStroke);
